fixed contrasts for menu

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+.cart-list
+{
+    color: black !important;
+}
 #tab_domicilio_content {
     font-size: 2.3vw;
     padding: 10%;
@@ -60,7 +64,7 @@
 
 
 .breadcrumb span {
-    color: #f18181;
+    color: darkred;
 }
 
 .checkout{
@@ -73,7 +77,7 @@
     font-size: 0.7em;
     background-color: rgb(220, 47, 47);
     border-radius: 8%;
-    color:#d0d0d0;
+    color:white;
 }
 
 .cart-review{
@@ -162,7 +166,6 @@
 
     .breadcrumb li {
         margin: 0 10px;
-        color: #f18181;
         font-size: 1.3em;
     }
 
@@ -322,7 +325,7 @@
 
     .breadcrumb li {
         margin: 0 10px;
-        color: #f18181;
+        color: darkred;
         font-size: 1.3em;
     }
 
